# dmipy-sim

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
dmipy_sim/: __init__.py  _gpu_config.py  constants.py  core.py  geometries.py  gpu.py  mesh.py  noise.py  pedagogy.py  physics.py  sh_convolution.py  viz.py  waveforms.py
dmipy_sim/math/: __init__.py  gradient_conversions.py  sh_analytical.py
dmipy_sim/sequences/: __init__.py  _helpers.py  pulseq.py  scanner_constants.json  scanner_constants.py  sequence.py
dmipy_sim/substrate/: __init__.py  biophysical_constants.py  substrate.py  validators.py
examples/: canonical_wm_flagship.ipynb  canonical_wm_flagship.md  canonical_wm_parity_from_sim.py  mesh_ply_and_viz.ipynb  pgste_t1_mixing_time.py
examples/mesh_viz/: README.md
examples/validation/: extra_axonal_tortuosity_findings.md  extra_axonal_tortuosity_scale.py  permeability_1d_to_3d.py  permeability_findings.md  surface_relaxivity_1d_to_3d.py  surface_relaxivity_findings.md
tests/: conftest.py  test_box_1d.py  test_btensor.py  test_compartment_tagging.py  test_cpmg_multiecho.py  test_cylinder.py  test_ellipsoid.py  test_ellipsoid_permeability.py  test_free_1d.py  test_free_3d.py  test_free_ogse.py  test_general_waveform.py  test_geometry_properties.py  test_gpu_and_batching.py  test_mesh.py  test_mesh_mc.py  test_mixture.py  test_myelin.py  test_noise.py  test_ogse_waveform.py  test_packed_cylinders.py  test_packed_cylinders_permeability.py  test_packed_myelinated_cylinders.py  test_packed_spheres.py  test_pedagogy.py  test_permeability_crossing.py  test_pgste_t1.py  test_pulseq_interop.py  test_sh_convolution.py  test_sphere.py  test_sphere_permeability.py  test_t2.py  test_viz_sequence.py
tests/fixtures/wm_cross_section/: axon_table.csv  distributions.yaml  metadata.yaml
tests/physics/: conftest.py  test_karger_mc_parity.py  test_permeability.py  test_sgp_pore_sizes.py  test_surface_relaxivity.py  test_t2_walker_parity.py
tests/validation/: test_permeability_ladder.py  test_surface_relaxivity_ladder.py
